@@ -1,5 +1,11 @@
 2010-06-03  Rik <octave@nomad.inbox5.com>
 
+        * general/cart2pol.m, general/cart2sph.m, general/pol2cart.m, 
+        general/sph2cart.m: Add option to operate on column matrix of 
+        coordinates.
+
+2010-06-03  Rik <octave@nomad.inbox5.com>
+
         * general/arrayfun.m, general/cart2pol.m, general/cart2sph.m, 
         general/idivide.m, general/logspace.m, general/sph2cart.m, 
         general/structfun.m, image/imagesc.m, io/csvread.m, io/csvwrite.m, 
